@@ -76,6 +76,7 @@
 	#2389: Generate a Makefile wrapper in $(O)
 	#2461: wireless_tools: install shared library if needed
 	#2521: Can't compile sdl_mixer, mikmod.h can't be found
+	#2533: xserver_xorg-server: Enable glx, if mesa3d is built
 	#2563: [PATCH] cairo: Expose the configure option to disable some...
 	#2581: libmms: Update to 0.6, and patch to work on architectures...
 	#2707: Can't compile linux kernel using buildroot + crosstool-ng
